--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <div class="background-main1"></div>
     <div class="background-main2"></div>
-    <div class="background-main3"></div>
+    <!-- <div class="background-main3"></div> -->
+    <div class="background-reviews"></div>
     <div class="wrapper">
       
       <header class="header">
@@ -338,5 +339,6 @@
 
 
     </div>
+    <script src="js/script.js"></script> 
   </body>
 </html>
