--- a/service-article.html
+++ b/service-article.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style/style-zero.css" />
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/style-adaptive.css" />
 </head>
 
 <body>
