--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
     <div class="background-main1"></div>
     <div class="background-main2"></div>
     <!-- <div class="background-main3"></div> -->
-    <div class="background-reviews"></div>
+    <div class="background-reviews">
+      <img class="background-reviews__Star1" src="img/Soft Star1.png" alt="img">
+      <img class="background-reviews__Star2" src="img/Soft Star2.png" alt="img">
+      <img class="background-reviews__Star3" src="img/Soft Star3.png" alt="img">
+    </div>
+    <!-- <div class="background-choice__left">
+      <img src="img/LightningLeft.png" alt="img">
+    </div>
+    <div class="background-choice__right">
+      <img src="img/LightningRight.png" alt="img">
+    </div> -->
     <div class="wrapper">
       
       <header class="header">
