--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <img class="background-reviews__Star2" src="img/Soft Star2.png" alt="img">
       <img class="background-reviews__Star3" src="img/Soft Star3.png" alt="img">
     </div>
-    <!-- <div class="background-choice__left">
-      <img src="img/LightningLeft.png" alt="img">
+     <div class="background-choice__left">
+      <img class="background-choice__leftImg" src="img/LightningLeft.png" alt="img">
     </div>
-    <div class="background-choice__right">
+    <!--<div class="background-choice__right">
       <img src="img/LightningRight.png" alt="img">
     </div> -->
     <div class="wrapper">
@@ -275,7 +275,7 @@
                     <h2 class="_h2 question__title_h2">Вопрос/Ответ</h2>
                   </div>
                   <div class="question__block">
-                    <div class="question__item">
+                    <!-- <div class="question__item">
                       <div class="question__text">Чем ваша компания лучше других?</div>
                       <div class="question__img"><img class="question__img_hover" src="/img/Vector.svg" alt="img"></div>
                     </div>
@@ -290,6 +290,25 @@
                     <div class="question__item">
                       <div class="question__text">Почему мы сами еще не в ТОПе?</div>
                       <div class="question__img"><img class="question__img_hover" src="/img/Vector.svg" alt="img"></div>
+                    </div> -->
+                    <button class="collapsible"> Open Section1</button>
+                    <div class="content">
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt odit vel, aliquam praesentium quasi delectus quibusdam nulla quisquam culpa facere provident omnis ut rerum sequi sint? Sit, similique eveniet?</p>
+                    </div>
+
+                    <button class="collapsible"> Open Section1</button>
+                    <div class="content">
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt odit vel, aliquam praesentium quasi delectus quibusdam nulla quisquam culpa facere provident omnis ut rerum sequi sint? Sit, similique eveniet?</p>
+                    </div>
+
+                    <button class="collapsible"> Open Section1</button>
+                    <div class="content">
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt odit vel, aliquam praesentium quasi delectus quibusdam nulla quisquam culpa facere provident omnis ut rerum sequi sint? Sit, similique eveniet?</p>
+                    </div>
+
+                    <button class="collapsible"> Open Section1</button>
+                    <div class="content">
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos nesciunt odit vel, aliquam praesentium quasi delectus quibusdam nulla quisquam culpa facere provident omnis ut rerum sequi sint? Sit, similique eveniet?</p>
                     </div>
                   </div>
                 </div>
