--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
             <div class="header__contact_telefon">+7 993 453-63-07</div>
             <div class="header_contact_href"><a href="#">Написать в What’sApp</a></div>
           </div>
+          <!--
           <div class="header__element">
             <div class="heder__element_whatsapp"><a href="#"><img src="img/whatsapp.svg" alt="whatsapp"></a></div>
             <div class="heder__element_telegram"><a href="#"><img src="img/telegram.svg" alt="telegram"></a></div>
             <div class="heder__element_email"><a href="#"><img src="img/email.svg" alt="email"></a></div>
           </div>
+        -->
         </div>
         <hr class="header__hr">
       </header>
@@ -119,10 +121,10 @@
                                           </div>
                                       </div>
               </div>
-              </div>>      
+              </div>      
     
               
-            </section>>
+            </section>
 
             <section class="page__services-block services">
               <div class="services-block__container _container">
