--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style/style-zero.css" />
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   </head>
 
   <body>
@@ -370,6 +372,10 @@
 
 
     </div>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    
+    <script src="slick/slick.min.js"></script>
     <script src="js/script.js"></script> 
+    
   </body>
 </html>
