добавление трипл старс

--- a/index.html
+++ b/index.html
@@ -231,6 +231,13 @@
             
             <section class="page__reviews-block reviews">
               <div class="reviews-block__container _container">
+                <div class="reviews_gradient_bg">
+
+                </div>
+
+                <div class="triple_stars revies_triple_stars">
+                  
+                </div>
 
                 <div class="reviews-block__body">
                   <div class="reviews-block__title">
